Finishing off clipping ux upgrade. Minor refactors in ipchandler, created stickytext helper component to avoid caret jimbling

--- a/react/App.css
+++ b/react/App.css
@@ -9,22 +9,18 @@ body {
 /*For Image Preview*/
 .preview-text { 
   flex-grow: 1;
-  position: absolute;
-  display: block;
-  bottom: 12%; 
-  left: 30%;
-  right: 30%;
-  width: 40%;
+  opacity: 85%;
 }
 .toolbar-wrapper {
+  width:50%;
   position: fixed;
   bottom: 68px;
   left: 50%;
-  padding: 0px 24px;
+  padding: 12px 12px;
   color: #fff;
   font-size: 20px;
-  background-color: rgba(0, 0, 0, 0.1);
-  border-radius: 100px;
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 12px;
   transform: translateX(-50%);
 }
 
